fix: replaced margin: 0 auto; with display: flex;, deleted body{overflow-x: hidden;}, created list in section 'resources'

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,19 @@
-body{
-  overflow-x: hidden;
-}
-
 .page {
   min-width: 1100px;
   max-width: 1600px;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header {
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   height: 100vh;
+  width: 100%;
   min-height: 600px;
   max-height: 756px;
   position: relative;
@@ -69,8 +69,6 @@ body{
   padding: 0;
   text-decoration: none;
   color: #2f80ed;
-  margin: 0 auto;
-  padding: 0;
   font-size: 18px;
   line-height: 25px;
 }
@@ -116,7 +114,7 @@ body{
 }
 
 .content{
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   width: 100%;
   display: flex;
@@ -188,7 +186,7 @@ body{
 }
 
 .techniques{
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   width: 80%;
   padding: 100px 10%;
@@ -248,7 +246,7 @@ body{
 }
 
 .feynman{
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   width: 100%;
   min-height: 790px;
@@ -303,7 +301,7 @@ body{
 }
 
 .kaufman{
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   width: 100%;
   padding: 90px 0;
@@ -386,7 +384,7 @@ body{
 }
 
 .resources{
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   padding: 100px 0 217px;
   display: flex;
@@ -402,6 +400,7 @@ body{
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  list-style-type: none;
 }
 
 .resources__logo-image{
@@ -417,7 +416,7 @@ body{
 }
 
 .footer{
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   width: 100%;
   background-color: #1f1f1f;
